--- a/src/components/sections/generosity/generosity.module.css
+++ b/src/components/sections/generosity/generosity.module.css
@@ -7,7 +7,6 @@
   margin: 5rem auto;
   gap: 2rem;
   color: var(--text-primary);
-  margin-bottom: -2rem;
 }
 
 .title {
